Remove extra modal and add translate to strings.

--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -222,7 +222,7 @@
                                                                     class="modal-title font-size-3 text-uppercase font-weight-bold"
                                                                     id="addPaymentTitle"
                                                                 >
-                                                                    ავტომატური დაფინანსება
+                                                                    {{'Regular Donation'|t}}
                                                                 </h5>
                                                                 <button
                                                                     type="button"
@@ -244,36 +244,37 @@
                                                                         <h6
                                                                             class="text-uppercase m-0"
                                                                         >
-                                                                            მიზანი/პოლიტიკოსი: <b class="text-success"
-                                                                                                  id="main-holder">ზურაბ
-                                                                                ჯაფარიძეს</b>
+                                                                            {{ 'Aim/Politician'|t }}: <b
+                                                                                class="text-success"
+                                                                                id="main-holder"></b>
 
                                                                         </h6>
                                                                         <h6
                                                                             class="text-uppercase m-0"
                                                                         >
-                                                                            თანხა: <b class="text-success"
-                                                                                      id="amount-holder">15 ლარი</b>
+                                                                            {{ 'Amount'|t }}: <b class="text-success"
+                                                                                                 id="amount-holder"></b>
 
                                                                         </h6>
                                                                         <h6
                                                                             class="text-uppercase m-0"
                                                                         >
-                                                                            ყოველთვე ჩაგერიცხებათ: <b
+                                                                            {{ 'You will get'|t }}: <b
                                                                                 class="text-success" id="ged-holder"><i
-                                                                                    class="icon-ged line-height-1-1"></i>15</b>
+                                                                                    class="icon-ged line-height-1-1"></i></b>
 
                                                                         </h6>
                                                                         <h6
                                                                             class="text-uppercase m-0"
                                                                         >
-                                                                            პერიოდულობა: <b class="text-success"
-                                                                                            id="date-holder">1 თვე</b>
+                                                                            {{ 'Periodicity'|t }}: <b
+                                                                                class="text-success"
+                                                                                id="date-holder"></b>
 
                                                                         </h6>
                                                                     </div>
                                                                     <hr class="border-dashed border-secondary"/>
-                                                                    <h6 class="text-uppercase pt-2 text-warning font-weight-bold my-3 text-center">აირჩიე ბარათი ავტომატური დაფინანსებისთვის</h6>
+                                                                    <h6 class="text-uppercase pt-2 text-warning font-weight-bold my-3 text-center">{{ 'Select card for regular payment'|t }}</h6>
                                                                     <div class="cc-selector row">
                                                                         <div
                                                                             class="align-self-center margin-control"
