Change ged format.

--- a/web/modules/custom/girchi_my_party_list/templates/girchi-party-list.html.twig
+++ b/web/modules/custom/girchi_my_party_list/templates/girchi-party-list.html.twig
@@ -38,7 +38,7 @@
                     <span
                         class="text-success font-size-4 font-weight-bold d-block d-md-none text-nowrap line-height-0-8"
                     ><i class="icon-ged font-size-3"></i
-                        >{{ supporter.ged_amount }}</span>
+                        >{{ supporter.ged_amount|ged_long_format }}</span>
 {{ supporter.percentage }}%
         </td>
         <td class="align-middle text-center d-none d-md-table-cell">
