--- a/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
@@ -7,6 +7,7 @@
             {{ 'Regular donation settings' |t }}
         </h6>
         <div class="ml-auto my-n1 d-none d-sm-block">
+            {% if cards|length > 0 %}
             <button
                 data-toggle="modal"
                 data-target="#addPayment"
@@ -14,9 +15,11 @@
             >
                 {{ 'Add new payment' |t }}
             </button>
+            {% endif %}
         </div>
     </div>
     <div class="card-body p-3 p-sm-4">
+        {% if cards|length > 0 %}
         <button
             data-toggle="modal"
             data-target="#addPayment"
@@ -24,6 +27,7 @@
         >
             {{ 'Add new payment' |t }}
         </button>
+        {% endif %}
         <hr class="my-3 d-sm-none"/>
         <!-- Start payments list -->
         <div>
@@ -385,7 +389,6 @@
                                 <input
                                     type="number"
                                     class="form-control form-control-lg amount"
-                                    id="amount"
                                     name="amount"
                                     data-toggle="calculate-ged"
                                     data-output="#ged-output-add"
@@ -408,7 +411,7 @@
                             <div class="form-group w-100 w-md-50 pr-sm-2">
                                 <label class="form-label" for="period">{{ 'Periodicity' | t }}</label>
                                 <div class="form-control form-control-lg">
-                                    <select name="period" id="period">
+                                    <select name="period">
                                         <option value="">{{ 'Select' | t }}</option>
                                         <option {{ regular_donation.frequency.value == 1 ? "selected" : "" }}
                                             value="1">{{ 'Every month' |t }}</option>
@@ -422,7 +425,7 @@
                             <div class="form-group w-100 w-md-50">
                                 <label class="form-label" for="date">{{ 'Donation date' |t }}</label>
                                 <div class="form-control form-control-lg">
-                                    <select name="date" id="date">
+                                    <select name="date">
                                         <option value="">{{ 'Select' |t }}</option>
                                         {% for i in 1..31 %}
                                             <option {{ i == regular_donation.payment_day.value ? 'selected' : '' }}
@@ -438,7 +441,7 @@
                                 >{{ 'Donation aim' | t }}</label
                                 >
                                 <div class="form-control form-control-lg">
-                                    <select name="aim" id="aim">
+                                    <select name="aim" >
                                         <option value="">{{ 'Select' |t }}</option>
                                         {% for key, term in terms %}
                                             <option {{ key == regular_donation.aim_id.target_id ? "selected" : "" }}
@@ -453,7 +456,7 @@
                                 >{{ 'Donation to politician' | t }}</label
                                 >
                                 <div class="form-control form-control-lg">
-                                    <select name="politician" id="politician">
+                                    <select name="politician" >
                                         <option value="">{{ 'Select' |t }}</option>
                                         {% for key, politician in politicians %}
                                             <option {{ key == regular_donation.politician_id.target_id ? "selected" : "" }}
@@ -463,6 +466,82 @@
                                 </div>
                             </div>
                         {% endif %}
+
+                        <hr class="border-dashed border-secondary"/>
+                        <h6 class="text-uppercase pt-2 text-warning font-weight-bold my-3 text-center">
+                            {{'Select card for regular payment'}}</h6>
+                        <div class="cc-selector row">
+                            <div
+                                class="align-self-center margin-control"
+                            >
+
+                                {% for card in cards %}
+                                    {% if card.Type() == 'VISA' %}
+                                        <input
+                                            id="regular-visa-{{ card.id() }}-{{ regular_donation.id.value }}"
+                                            type="radio"
+                                            name="regular-credit-card"
+                                            value="{{ card.id() }}"
+                                        />
+                                        <label
+                                            class="drinkcard-cc"
+                                            for="regular-visa-{{ card.id() }}-{{ regular_donation.id.value }}"
+                                        >
+                                            <div
+                                                class="cc-dark-mobile col-md-3 m-2"
+                                            >
+                                                <span
+                                                    class="chip-mobile"></span>
+                                                <img
+                                                    src="/{{ directory }}/images/visa2.svg"
+                                                    class="logo-visa-mobile"
+                                                    height="35px"
+                                                    width="35px"
+                                                    alt=""
+                                                />
+                                                <span
+                                                    class="cc-number-mobile"
+                                                >**** **** **** {{ card.Digits() }}</span
+                                                >
+                                                <span class="cc-name-mobile"
+                                                >{{ card.Expiry(TRUE) }}</span
+                                                >
+                                            </div>
+                                        </label>
+                                    {% elseif card.Type() == 'MC' %}
+                                        <input
+                                            id="regular-mc-{{ card.id() }}-{{ regular_donation.id.value }}"
+                                            type="radio"
+                                            name="regular-credit-card"
+                                            value="{{ card.id() }}"
+                                        />
+                                        <label class="drinkcard-cc"
+                                               for="regular-mc-{{ card.id() }}-{{ regular_donation.id.value }}">
+                                            <div
+                                                class="cc-green-mobile col-md-3 m-2"
+                                            >
+                                                <span
+                                                    class="chip-mobile"></span>
+                                                <img
+                                                    src="/{{ directory }}/images/mc_symbol.svg"
+                                                    height="35px"
+                                                    width="35px"
+                                                    class="logo-mastercard-mobile"
+                                                    alt=""
+                                                />
+                                                <span
+                                                    class="cc-number-mobile"
+                                                >**** **** **** {{ card.Digits() }}</span
+                                                >
+                                                <span class="cc-name-mobile"
+                                                >{{ card.Expiry(TRUE) }}</span
+                                                >
+                                            </div>
+                                        </label>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
                         <input type="hidden" name="donation-id" value="{{ regular_donation.id.value }}">
                         <input type="hidden" name="user-id" value="{{ current_user_id }}">
                         <button
