#594 Add paypal button container on girchi donatinos page.

--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -133,6 +133,7 @@
                                         </div>
                                         {{ form_single.currency }}
                                         {{ form_single.submit }}
+                                        <div id="paypal-button-container"></div>
                                     </form>
                                 </div>
                                 {% if logged_in %}
