--- a/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
@@ -250,7 +250,7 @@
 
                     <hr class="border-dashed border-secondary"/>
                     <h6 class="text-uppercase pt-2 text-warning font-weight-bold my-3 text-center">
-                        {{'Select card for regular payment'}}</h6>
+                        {{'Select card for regular payment'|t}}</h6>
                     <div class="cc-selector row">
                         <div
                             class="align-self-center margin-control"
