--- a/web/modules/custom/girchi_banking/templates/banking.html.twig
+++ b/web/modules/custom/girchi_banking/templates/banking.html.twig
@@ -13,7 +13,7 @@
         class="d-flex border-bottom flex-column flex-md-row px-3 px-md-4 py-3 align-items-md-center"
     >
         <h6 class="text-uppercase font-weight-bold m-0">
-            {{ 'My cards'|t }}
+            {{ 'My credit cards'|t }}
         </h6>
         <div class="ml-auto my-n1 d-none d-sm-block">
             <button
